# osdev

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-iso.sh  limine.cfg
include/: stivale.h
include/mem/: gdt.h  paging.h
include/stdlib/: stdio.h  string.h
include/sys/: cpuid.h
src/: kernel.c  kernel.cpp  linker.ld
src/mem/: gdt.c  gdt.cpp  paging.c  paging.nasm  paging.s
src/stdlib/: stdio.c  stdio.cpp  string.c
src/sys/: cpuid.cpp
toolchains/: arm.cmake  riscv.cmake  x86-64.cmake
